[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/special_buttons/arrow_buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/thumbnails/thumbnail_0.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/empty_.png" type="Texture" id=3]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/GUI/less_long_tab.png" type="Texture" id=5]
[ext_resource path="res://assets/font/EightBitDragon-anqx.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://menus/TextEdit_limit.gd" type="Script" id=7]
[ext_resource path="res://menus/ScrollContainer.gd" type="Script" id=8]
[ext_resource path="res://menus/lvl_customizer.gd" type="Script" id=9]
[ext_resource path="res://menus/special_buttons/nice_toggel.tscn" type="PackedScene" id=10]
[ext_resource path="res://menus/special_buttons/button_cancel.tscn" type="PackedScene" id=11]
[ext_resource path="res://menus/new_dynamicfont.tres" type="DynamicFont" id=12]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
margin_top = -4.0
margin_right = 1292.0
margin_bottom = 724.0
rect_min_size = Vector2( 1, 1 )
rect_clip_content = false
scroll_horizontal_enabled = false
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 3200.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_customizer" type="Label" parent="TextureRect/ScrollContainer/TextureRect"]
margin_left = 264.0
margin_top = 59.0
margin_right = 1026.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Level Customizer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_code" type="Label" parent="TextureRect/ScrollContainer/TextureRect"]
margin_left = 1400.0
margin_top = 276.0
margin_right = 1725.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 4 )
text = "Level Code:

   ------"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="TextureRect/ScrollContainer/TextureRect/lvl_code"]
margin_left = 16.0
margin_top = 64.0
margin_right = 333.0
margin_bottom = 136.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "------"
breakpoint_gutter = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
MAX_CHAR = 6

[node name="arrow_buttons" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 1 )]
margin_left = 184.0
margin_top = 204.0
margin_right = 224.0
margin_bottom = 244.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="lvl_name" type="Label" parent="TextureRect/ScrollContainer/TextureRect/arrow_buttons"]
margin_left = 293.333
margin_top = 506.667
margin_right = 981.333
margin_bottom = 618.667
custom_fonts/font = ExtResource( 12 )
text = "Plains"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/TextureRect/arrow_buttons"]
margin_left = 466.667
margin_top = 106.667
margin_right = 919.667
margin_bottom = 226.667
custom_fonts/font = ExtResource( 12 )
text = "Level base:"

[node name="Panel" type="Panel" parent="TextureRect/ScrollContainer/TextureRect/arrow_buttons"]
margin_left = 427.0
margin_top = 227.0
margin_right = 840.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thumbnail" type="TextureRect" parent="TextureRect/ScrollContainer/TextureRect/arrow_buttons"]
margin_left = 440.589
margin_top = 237.643
margin_right = 1720.59
margin_bottom = 1005.64
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 10 )]
margin_left = 256.0
margin_top = 668.0
margin_right = 512.0
margin_bottom = 740.0
custom_fonts/font = ExtResource( 12 )

[node name="speed x2" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 403.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 12 )
text = "Speed x2:"

[node name="bridge" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 144.0
margin_right = 333.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 12 )
text = "Bridge:"

[node name="ROAD ROLLER DA" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 216.0
margin_right = 468.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 12 )
text = "Road Roller:"

[node name="score up" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 288.0
margin_right = 468.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 12 )
text = "Score +10k:"

[node name="za wardo" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 360.0
margin_right = 628.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 12 )
text = "Broken steering:"

[node name="shield" parent="TextureRect/ScrollContainer/TextureRect/items" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 432.0
margin_right = 438.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 12 )
text = "Super Car:"

[node name="enemies" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 10 )]
margin_left = 256.0
margin_top = 1292.0
margin_right = 581.0
margin_bottom = 1364.0
custom_fonts/font = ExtResource( 12 )
text = "Enemies:"

[node name="roller" parent="TextureRect/ScrollContainer/TextureRect/enemies" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 403.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 12 )
text = "Road Roller:"

[node name="snowmen" parent="TextureRect/ScrollContainer/TextureRect/enemies" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 144.0
margin_right = 398.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 12 )
text = "Snowman:"

[node name="fire_bal" parent="TextureRect/ScrollContainer/TextureRect/enemies" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 12 )
text = "Fire ball:"

[node name="ghost" parent="TextureRect/ScrollContainer/TextureRect/enemies" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 288.0
margin_right = 393.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 12 )
text = "Phantom:"

[node name="sound_fx" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 10 )]
margin_left = 256.0
margin_top = 1780.0
margin_right = 786.0
margin_bottom = 1852.0
custom_fonts/font = ExtResource( 12 )
text = "Sound Effects:"

[node name="music" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 10 )]
margin_left = 256.0
margin_top = 1964.0
margin_right = 512.0
margin_bottom = 2036.0
custom_fonts/font = ExtResource( 12 )
text = "Music:"
toggle_type = 1

[node name="BGM1" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 403.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 12 )
text = "Plains Theme:"
toggle_type = 1

[node name="BGM2" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 144.0
margin_right = 398.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Highway Theme:"
toggle_type = 1

[node name="BGM3" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Snow field Theme:"
toggle_type = 1

[node name="BGM4" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 288.0
margin_right = 393.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Volcano Theme:"
toggle_type = 1

[node name="BGM5" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 360.0
margin_right = 393.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Phantom field Theme:"
toggle_type = 1

[node name="BGM6" parent="TextureRect/ScrollContainer/TextureRect/music" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 432.0
margin_right = 483.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Menu Theme:"
toggle_type = 1

[node name="difficulty" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 10 )]
margin_left = 256.0
margin_top = 2572.0
margin_right = 1512.0
margin_bottom = 2644.0
custom_fonts/font = ExtResource( 12 )
text = "Difficulty:"
toggle_type = 1

[node name="ez" parent="TextureRect/ScrollContainer/TextureRect/difficulty" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 298.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 12 )
text = "Sloth:"
toggle_type = 1

[node name="normal" parent="TextureRect/ScrollContainer/TextureRect/difficulty" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 144.0
margin_right = 338.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 12 )
text = "Normal:"
toggle_type = 1

[node name="hard" parent="TextureRect/ScrollContainer/TextureRect/difficulty" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 216.0
margin_right = 283.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 12 )
text = "Hard:"
toggle_type = 1

[node name="impossible" parent="TextureRect/ScrollContainer/TextureRect/difficulty" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 288.0
margin_right = 438.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 12 )
pressed = false
text = "Impossible:"
toggle_type = 1

[node name="button_cancel" parent="TextureRect/ScrollContainer/TextureRect" instance=ExtResource( 11 )]
margin_left = 200.0
margin_top = 3028.0
margin_right = 352.0
margin_bottom = 3156.0

[node name="button_ok" type="Button" parent="TextureRect/ScrollContainer/TextureRect"]
margin_left = 880.0
margin_top = 3044.0
margin_right = 1016.0
margin_bottom = 3136.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 12 )
text = "Ok"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="TextureRect/ScrollContainer/TextureRect/button_ok"]
show_behind_parent = true
margin_left = 38.1711
margin_top = 25.824
margin_right = 108.171
margin_bottom = 75.824
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}
